## Version 0.0.2 21/06/22 - Git INIT congiguração II;

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="30">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Página de Login com Glassmorphism">
+    <meta name="author" content="Charlesj4">
+    <meta name="keywords" content="Page Login, login form, Glassmorphism">
     <title></title>
 
     <!-- LINK STYLE CSS -->
